--- a/Lab04/lab04.html
+++ b/Lab04/lab04.html
@@ -6,6 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab04</title>
     <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        header {
+            background: #71859b;
+            color: antiquewhite;
+            padding: 10px 0%;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        #bookmarks-section,
+        #palindrome-section {
+            margin-bottom: 30px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 20px;
+            background-color: white; 
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+        }
+
+
         .palindrome {color: green;}
         .not-palindrome {color: red;}
     </style>
