--- a/Lab05/lab05.html
+++ b/Lab05/lab05.html
@@ -4,18 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab05</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=fullscreen" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close_fullscreen" />
 
     <style>
+        
+        .image-container {
+            position: relative; 
+        }
+
         #myImage {
-            width: 100px;
-            height: 100px;
+            width: 300px;
+            height: 250px;
             cursor: pointer;
+            position: absolute; 
+            top: 70%;  
+            left: 3%;  
+        }
+
+        .fullscreen-icon {
+            position: absolute;
+            top: 10px; 
+            right: 10px; 
+            font-size: 30px;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 50%;
+            padding: 5px;
+            display: none; 
+            cursor: pointer;
+            z-index: 10;
         }
     </style>
 
 </head>
 <body>
+
     <h1>Problem 1: Form Validation</h1>
     
     <h2>Enter your information below:</h2>
@@ -105,28 +128,43 @@
         textInput.addEventListener('input', updateCount);
     </script>
 
-    <h1>Problem 3: Maximation of Image</h1>
-    <span class="material-symbols-outlined">fullscreen</span>
+    <h1>Problem 3: Maximization of Image</h1>
 
     <div class="image-container">
         <img src="aurora.jpg" alt="Aurora Borealis" id="myImage">
-    </div>
-
-    <div id="fullscreen-overlay">
-        <img id="fullscreen-image" src="" alt="Fullscreen Image">
-        <i class="material-icons" id="close-icon">close</i>
+        <span id="close_fullscreen" class="material-symbols-outlined fullscreen-icon">close_fullscreen</span>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-         $(document).ready(function(){
-        $("#myImage").click(function(){
-            $(this).animate({
-                width: "200px",   // New width
-                height: "200px"   // New height
-            }, 2000);
+        $(document).ready(function(){
+            let isFullScreen = false;
+            $("#myImage").click(function(){
+                if (!isFullScreen) {
+                    $(this).animate({
+                        width: "100vw",   
+                        height: "100vh",   
+                        top: 0,           
+                        left: 0           
+                    }, 2000);
+
+                    $("#close_fullscreen").fadeIn(200); // Show the close icon
+                    isFullScreen = true;
+                }
+            });
+
+            $("#close_fullscreen").click(function(){
+                $("#myImage").animate({
+                    width: "300px",  
+                    height: "250px", 
+                    top: "70%",      
+                    left: "3%"       
+                }, 2000);
+
+                $(this).fadeOut(200); 
+                isFullScreen = false;
+            });
         });
-    });
     </script>
 </body>
 </html>
